syntax = "proto3";

package schema;

message User {
  string name = 1; // This is the primary key
  string email = 2;
  string password_hash = 3;
  bool is_verified = 4;
  int64 create_dt = 5;
}
